# pizza-factory

./: .gitignore  Cargo.toml  PROTOCOLE-SPEC.md  README.md  REVERSE-ENGINEERING.md  SPECIFICATIONS.md  TCP.yaml
.github/workflows/: rust.yml
db/: orders.json
doc/: TCP.yaml  UDP.yaml  UDPUS.yaml
doc/pcap/: client-command-1.pcap  client-command-2.pcapng  client-command.pcapng  starting-peer-annouced.pcap
src/: cli.rs  main.rs  node.rs  protocol.rs  store.rs  tui.rs
src/cli/: client.rs  client_impl.rs  command.rs  command.txt  start.rs  start_tui.rs
src/network/: tcp.rs  udp.rs
src/network/udp/: gossip.rs  transport.rs  udp_gossip.rs  udp_transport.rs
src/recipe/: mod.rs  parser.rs
src/server/: command.txt  handlers.rs  mod.rs  tcp.rs
src/tui/: app.rs  command.rs  ui.rs
