[package]
name = "pizza-factory"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }
clap = { version = "4.6.0", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.28"
tui-logger = "0.18.2"
